test/fail_compilation/fail50.d
struct Marko
{
    int a;
    int* m = &a;
}

